# AlgoMLN

./: .env.example  ARCHITECTURE.md  BACKEND.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  FRONTEND.md  README.md  SECURITY.md  errors.txt  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
plans/: GEMINI.md  UI.md  backtest_analytics.md  data_layer.md  fix-app-frame.md  phase7_prompts.md  plan.md  scaling.md  scripting_layer.md
plans/multi-symbol-trade/: 1.txt  2.txt  3.txt  4.txt
plans/plugin-system/: c-p9.txt  p1.txt  p10.txt  p11.txt  p2.txt  p3.txt  p4.txt  p5.txt  p6.txt  p7.txt  p8.txt  p9.txt
sample-data/: tiny_candles.csv  tiny_strategy.algomln
scripts/: fetch_seed_indices.py
src/: App.module.css  App.tsx  lib.rs  main.tsx  search.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/broker/: mod.rs  symbol_map.rs
src/commands/: data.rs  data.ts  indices.rs  mod.rs  plugins.rs  registry.rs  search.rs  state.rs  strategy.rs
src/data/: csv.rs  mod.rs
src/feed/: manager.rs  mod.rs
src/hooks/: useBacktest.ts  useDslSync.ts  useStrategyBuilder.ts
src/indicators/: atr.rs  bb.rs  ma.rs  mod.rs  rsi.rs  vwap.rs
src/indices/: mod.rs  refresh.rs  registry.rs
src/lib/: scaling.ts
src/models/: candle.rs  mod.rs  order.rs  position.rs  quote.rs  tick.rs
src/plugin/: host.rs  loader.rs  manifest.rs  mod.rs  registry.rs  tests.rs  types.rs
src/strategy/: analytics.rs  (+1 more)
strategies/: rsi_basic.algomln
(+97 files in other folders)
