[package]
name = "algomln"
version = "0.1.0"
edition = "2021"

[lib]
name = "algomln"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
regex = "1"
lazy_static = "1"
parking_lot = "0.12"
cron = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
rhai = { version = "1", features = ["sync", "no_closure"] }
wasmtime = "23"
wasmtime-wasi = "23"
tauri = { version = "2", features = [] }
